# astromatic_wrapper

./: .travis.yml  README.rst  pip-requirements  setup.cfg  setup.py
astromatic_wrapper/: __init__.py  api.py  pipeline.py
astromatic_wrapper/tests/: coveragerc  test_api.py
astromatic_wrapper/utils/: __init__.py  ldac.py  pipeline.py  utils.py
astromatic_wrapper/utils/tests/: setup_package.py  test_ldac.py  test_pipeline.py
astromatic_wrapper/utils/tests/data/: multiext.ldac.fits  test.ldac.fits
docs/: conf.py  index.rst  install.rst  modules.rst  overview.rst  pipelines.rst  quick_start.rst  working_with.rst
docs/astromatic_wrapper/: index.rst
licenses/: LICENSE.rst
