[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = astromatic_wrapper
description = Wrapper for E. Bertin's AstrOmatic Software Suite
long_description = This package contains a wrapper for AstrOmatic software codes as well as a template for creating custom pipelines using the AstrOmatic suite
author = Fred Moolekamp
author_email = fred.moolekamp@gmail.com
license = BSD
url = http://astropy.org/
edit_on_github = True
github_project = astropy/astropy
